@@ -268,88 +268,29 @@
 				</configuration>
 			</plugin>
 			<plugin>
-				<groupId>org.apache.maven.plugins</groupId>
-				<artifactId>maven-surefire-plugin</artifactId>
-				<version>3.0.0-M5</version>
-				<configuration>
-					<useSystemClassLoader>false</useSystemClassLoader>
-					<forkCount>0</forkCount>
-					<argLine>
-						--illegal-access=warn
-					</argLine>
-				</configuration>
-			</plugin>
-			<plugin>
 				<groupId>org.jacoco</groupId>
 				<artifactId>jacoco-maven-plugin</artifactId>
-				<version>0.8.4</version>
-				<configuration>
-					<destFile>${basedir}/target/coverage-reports/jacoco-unit.exec</destFile>
-					<dataFile>${basedir}/target/coverage-reports/jacoco-unit.exec</dataFile>
-					<excludes>
-					<exclude>**/common/**</exclude>
-					<exclude>**/router/**</exclude>
-					<exclude>**/Reverse*/**</exclude>
-					<exclude>**/routes.*</exclude>
-						<exclude>**/routes$javascript.**</exclude>
-				</excludes>
-				</configuration>
+				<version>0.8.5</version>
 				<executions>
 					<execution>
-						<id>jacoco-initialize</id>
+						<id>default-prepare-agent</id>
 						<goals>
 							<goal>prepare-agent</goal>
 						</goals>
 					</execution>
 					<execution>
-						<id>jacoco-site</id>
-						<phase>package</phase>
+						<id>default-report</id>
+						<phase>prepare-package</phase>
 						<goals>
 							<goal>report</goal>
 						</goals>
 					</execution>
 					<execution>
-						<id>default-check</id>
+						<id>report-aggregate</id>
+						<phase>verify</phase>
 						<goals>
-							<goal>check</goal>
+							<goal>report-aggregate</goal>
 						</goals>
-						<configuration>
-							<rules>
-								<rule>
-									<element>BUNDLE</element>
-									<limits>
-									    <limit>
-											<counter>COMPLEXITY</counter>
-											<value>COVEREDRATIO</value>
-											<minimum>0.40</minimum>
-									   </limit>
-										<limit>
-											<counter>INSTRUCTION</counter>
-											<value>COVEREDRATIO</value>
-											<minimum>0.40</minimum>
-										</limit>
-										<!--<limit>
-											<counter>CLASS</counter>
-											<value>MISSEDCOUNT</value>
-											<maximum>0</maximum>
-										</limit>-->
-									</limits>
-								</rule>
-								<rule>
-									<element>CLASS</element>
-									<excludes>
-										<include>*Controller</include>
-									</excludes>
-									<limits>
-										<!-- <limit>
-											<counter>LINE</counter>
-											<value>COVEREDRATIO</value>
-											<minimum>60%</minimum>
-										</limit> -->
-									</limits>
-								</rule>
-							</rules>
-						</configuration>
 					</execution>
 				</executions>
 			</plugin>
